crates/openlark-capability-unique/tests/ui/duplicate_capability_field.stderr
error: cannot find macro `__capability_catalog_unique_body` in this scope
 --> tests/ui/duplicate_capability_field.rs:4:5
  |
4 | /     openlark_capability_unique::assert_capability_catalog_unique! {
5 | |         { field: auth, name: "auth" },
6 | |         { field: auth, name: "auth" },
7 | |     }
  | |_____^
  |
  = note: this error originates in the macro `openlark_capability_unique::assert_capability_catalog_unique` (in Nightly builds, run with -Z macro-backtrace for more info)
